name:                advent-of-code
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Christian Charukiewicz
maintainer:          charukiewicz@protonmail.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

executable Day01
  main-is:             Day01.hs
  build-depends:       base >=4.10 && <4.13
  hs-source-dirs:      day-01
  default-language:    Haskell2010
  ghc-options:		   -main-is Day01
